# csv_lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  data.1.csv  flamegraph.sh  test_release.sh
docs/: book.toml  fields.md  macro.md  macrorules.md  rows.md
examples/benchmark/: Cargo.toml  data.1.csv  results.txt
examples/benchmark/src/: main.rs
examples/usageexample/: Cargo.toml  data.1.csv
examples/usageexample/src/: benchmark_results.txt  main.rs
src/: lib.rs  macros.rs
src/csv/: csv_reader.rs  csv_reader_thread.rs  csv_writer.rs  mod.rs  reader_slice.rs
src/decoders/: big5.rs  decoders.rs  gbk.rs  koi8r.rs  latin1.rs  latin2.rs  latin9.rs  mod.rs  shiftjis.rs  utf8.rs  windows1251.rs  windows1252.rs
src/encoders/: big5.rs  gbk.rs  koi8r.rs  latin1.rs  latin2.rs  latin9.rs  mod.rs  shiftjis.rs  utf8.rs  windows1251.rs  windows1252.rs
src/extensions/: field_extension.rs  mod.rs  row_extension.rs  slice_extension.rs
src/features/: ffi.rs
src/helpers/: bytes_helper.rs  mod.rs
src/io/: file_reader_mmap.rs  mod.rs  number_parser.rs  parser.rs
src/models/: csv_config.rs  csv_error.rs  data.rs  datatype.rs  editable_persist.rs  field.rs  in_row_iter.rs  master_parallel.rs  mod.rs  parallel.rs  platform_info.rs  row.rs  shared.rs  worker.rs  worker_status.rs  workers.rs
src/parallel/: mod.rs  parallel_reader.rs  row_parallel.rs
