[package]
name = "csv_lib"
version = "1.0.0"
edition = "2024"
authors = ["Ignacio Perez Panizza <ptechsoftware.correo@gmail.com>"]
description = "Library for parsing CSV files using memory-mapped I/O, with low alloc, and AVX2/NEON support"
license = "MIT"
repository = "https://github.com/PTechSoftware/csv_lib"
documentation = "https://docs.rs/csv_lib"
readme = "README.md"
keywords = ["csv", "parser", "rust", "memmap", "high-performance"]
categories = ["encoding", "parser-implementations"]
exclude = [
    "/target/*",
    "*.lock",
    "*.sh",
    "*.ps1",
    "*.bat",
    "*.png",
    "*.jpg",
    "*.svg",
    "docs/*",
    "examples/*",
    "tests/*",
]

[lib]
name = "csv_lib"
path = "src/lib.rs"

[features]
default = []
ffi = []


[dependencies]
memchr = "2.7.4"
memmap2 = "0.9.5"
tokio = "1.44.2"
crossbeam = "0.8.4"
futures = "0.3.31"


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
