[package]
name = "csv_lib"
build = "build.rs"
version = "1.0.5"
edition = "2018"
authors = ["Ignacio Perez Panizza <ptechsoftware.correo@gmail.com>"]
description = "Library for parsing CSV files using memory-mapped I/O, with low alloc, and AVX2/NEON support"
license = "MIT"
repository = "https://github.com/PTechSoftware/csv_lib"
documentation = "https://docs.rs/csv_lib"
readme = "README.md"
keywords = ["csv", "parser", "rust", "memmap", "high-performance"]
categories = ["encoding", "parser-implementations"]
exclude = [
    "/target/*",
    "*.lock",
    "*.sh",
    "*.ps1",
    "*.bat",
    "*.png",
    "*.jpg",
    "*.svg",
    "docs/*",
    "examples/*",
    "tests/*",
]

[lib]
name = "csv_lib"
path = "src/lib.rs"

[features]
default = []
ffi = []


[dependencies]
memchr = "2.7.4"
memmap2 = "0.9.5"
num_cpus = "1.16.0"


